# amethyst-mandelbrot

./: .envrc  Cargo.toml  display.ron
assets/: custom.frag  custom.vert
src/: custom_pass.rs  main.rs
